Melhoria no registro da data/horta transacao

--- a/src/main/resources/static/carrinho.html
+++ b/src/main/resources/static/carrinho.html
@@ -10,12 +10,18 @@
 
 <div class="container">
     <h1>Carrinho de Compras</h1>
+    
+    <!-- Adicione um elemento UL para os itens do carrinho -->
+    <ul id="cartItems"></ul>
+    <h2>Total: R$<span id="totalPrice">0.00</span></h2>
 
     <div class="buttons">
         <a href="index.html">Continuar Comprando</a>
-        <a href="pagamento.html">Finalizar Compra</a>
+        <a href="pagamento.html" id="paymentButton">Finalizar Compra</a>
     </div>
 </div>
+
+<script src="script.js"></script>
 
 </body>
 </html>
