--- a/src/main/resources/static/pilha.html
+++ b/src/main/resources/static/pilha.html
@@ -3,239 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Histórico de Compras</title>
-    <style>
-        /* Estilo do corpo da página */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f3f3f3;
-            margin: 0;
-            padding: 20px;
-        }
-
-        /* Cabeçalho */
-        h1 {
-            color: #131921;
-            font-size: 1.8em;
-            margin-bottom: 20px;
-        }
-
-        /* Tabela principal */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-        }
-        th {
-            background-color: #131921;
-            color: #ffffff;
-            padding: 12px;
-            text-align: left;
-        }
-        td {
-            padding: 12px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        td:first-child, th:first-child {
-            width: 15%;
-        }
-        td:last-child, th:last-child {
-            width: 10%;
-            text-align: center;
-        }
-
-        /* Estilo dos botões de ação */
-        .arrow {
-            cursor: pointer;
-            color: #ff9900;
-            font-size: 1.2em;
-            transition: transform 0.3s;
-        }
-        .expanded {
-            transform: rotate(90deg);
-        }
-
-        /* Estilo das linhas de detalhes adicionais */
-        .extra-info {
-            display: none;
-            background-color: #f8f8f8;
-        }
-        .sub-table {
-            width: 100%;
-            margin-top: 10px;
-            border-collapse: collapse;
-        }
-        .sub-table th {
-            background-color: #eaeaea;
-            color: #333;
-            padding: 8px;
-            text-align: left;
-        }
-        .sub-table td {
-            padding: 8px;
-            border-bottom: 1px solid #ddd;
-        }
-
-        /* Rodapé */
-        footer {
-            margin-top: 20px;
-            font-size: 0.9em;
-            text-align: center;
-            color: #555;
-        }
-    </style>
+    <title>Histórico de Pedidos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header -->
+<header>
+   	 <h1>RogerinhoBoasVendendas</h1>
+    	 <div class="header-buttons">
+        	<button class="carrinho" onclick="window.location.href='index.html'">Início</button>
+        	<button class="login-button" onclick="window.location.href='carrinho.html'">Carrinho</button>
+    </div>
+</header>
 
-<h1>Histórico de Compras</h1>
-<table id="dataTable">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Data e Hora</th>
-        <th>Valor</th>
-        <th>Forma de Pagamento</th>
-        <th>Ações</th>
-    </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
+     <!-- Seção de Pedidos -->
+    <div class="container">
+        <h2>Meus Pedidos</h2>
 
-<footer>
-    &copy; 2024 - Histórico de Compras - Amazon Inspired
-</footer>
+        <!-- Pedido 1 -->
+        <div class="order">
+            <div class="order-header">
+                <span>Pedido #12345</span>
+                <span class="order-date">Data: 20/11/2024</span>
+                <div class="order-total">
+                    <span>Total</span>
+                    <span class="order-value">R$ 250,00</span>
+                </div>
+            </div>
+            <button class="button2" onclick="toggleDetails(1)">Mais detalhes</button>
+            <div class="order-details" id="order-details-1">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Produto</th>
+                            <th>Quantidade</th>
+                            <th>Preço</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Produto A</td>
+                            <td>2</td>
+                            <td>R$ 50,00</td>
+                        </tr>
+                        <tr>
+                            <td>Produto B</td>
+                            <td>1</td>
+                            <td>R$ 150,00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-<script>
-    async function fetchData() {
-        try {
-            // Verifique o endpoint completo se necessário
-            const response = await fetch("v1/transacao/consolidar", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                },
-                cache: "no-store"
-            });
+        <!-- Pedido 2 -->
+        <div class="order">
+            <div class="order-header">
+                <span>Pedido #12346</span>
+                <span class="order-date">Data: 18/11/2024</span>
+                <div class="order-total">
+                    <span>Total</span>
+                    <span class="order-value">R$ 130,00</span>
+                </div>
+            </div>
+            <button class="button2" onclick="toggleDetails(2)">Mais detalhes</button>
+            <div class="order-details" id="order-details-2">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Produto</th>
+                            <th>Quantidade</th>
+                            <th>Preço</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Produto C</td>
+                            <td>1</td>
+                            <td>R$ 130,00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-            // Verifica o status da resposta e exibe erro, se houver
-            if (!response.ok) {
-                console.error("Erro na requisição:", response.status, response.statusText);
-                return;
+        <!-- Pedido 3 -->
+        <div class="order">
+            <div class="order-header">
+                <span>Pedido #12347</span>
+                <span class="order-date">Data: 15/11/2024</span>
+                <div class="order-total">
+                    <span>Total</span>
+                    <span class="order-value">R$ 190,00</span>
+                </div>
+            </div>
+            <button class="button2" onclick="toggleDetails(3)">Mais detalhes</button>
+            <div class="order-details" id="order-details-3">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Produto</th>
+                            <th>Quantidade</th>
+                            <th>Preço</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Produto D</td>
+                            <td>3</td>
+                            <td>R$ 190,00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; RogerinhoBoasVendendas.</p>
+    </footer>
+
+    <!-- Script para exibir/ocultar detalhes dos pedidos -->
+    <script>
+        function toggleDetails(orderId) {
+            var details = document.getElementById("order-details-" + orderId);
+            if (details.style.display === "block") {
+                details.style.display = "none";
+            } else {
+                details.style.display = "block";
             }
-
-            // Log dos dados recebidos para análise
-            const data = await response.json();
-            console.log("Dados recebidos da API:", data); // Confirma os dados recebidos
-            renderTable(data);
-        } catch (error) {
-            console.error('Erro ao buscar dados:', error);
         }
-    }
-
-
-    function renderTable(data) {
-        const tableBody = document.querySelector("#dataTable tbody");
-        tableBody.innerHTML = ''; // Limpa a tabela antes de renderizar novos dados
-
-        if (!Array.isArray(data) || data.length === 0) {
-            console.log("Nenhum dado encontrado.");
-            tableBody.innerHTML = '<tr><td colspan="5">Nenhum dado encontrado.</td></tr>';
-            return;
-        }
-
-        data.forEach(item => {
-            const row = document.createElement("tr");
-
-            // Exibe informações básicas
-            const idCell = document.createElement("td");
-            idCell.textContent = item.idTransacao || 'N/A';
-            row.appendChild(idCell);
-
-            const dateTimeCell = document.createElement("td");
-            dateTimeCell.textContent = item.dataTransacao || 'N/A';
-            row.appendChild(dateTimeCell);
-
-            const valueCell = document.createElement("td");
-            valueCell.textContent = "R$ " + (item.valor ? item.valor : '0.00');
-            row.appendChild(valueCell);
-
-            const tipoCell = document.createElement("td");
-            tipoCell.textContent = item.tipo || 'N/A';
-            row.appendChild(tipoCell);
-
-            const actionCell = document.createElement("td");
-            const arrowIcon = document.createElement("span");
-            arrowIcon.textContent = "▷";
-            arrowIcon.classList.add("arrow");
-            arrowIcon.addEventListener("click", () => toggleInfo(row, arrowIcon, item.produtos));
-            actionCell.appendChild(arrowIcon);
-            row.appendChild(actionCell);
-
-            tableBody.appendChild(row);
-
-            // Linha adicional para os detalhes dos produtos
-            const extraRow = document.createElement("tr");
-            extraRow.classList.add("extra-info");
-
-            const extraCell = document.createElement("td");
-            extraCell.colSpan = 5;
-
-            const subTable = document.createElement("table");
-            subTable.classList.add("sub-table");
-
-            const subTableHead = document.createElement("thead");
-            const subTableHeadRow = document.createElement("tr");
-            ["Produto", "Quantidade", "Preço"].forEach(text => {
-                const th = document.createElement("th");
-                th.textContent = text;
-                subTableHeadRow.appendChild(th);
-            });
-            subTableHead.appendChild(subTableHeadRow);
-            subTable.appendChild(subTableHead);
-
-            const subTableBody = document.createElement("tbody");
-            if (Array.isArray(item.produtos)) {
-                item.produtos.forEach(produto => {
-                    const subRow = document.createElement("tr");
-
-                    const nameCell = document.createElement("td");
-                    nameCell.textContent = produto.name || 'N/A';
-                    subRow.appendChild(nameCell);
-
-                    const quantityCell = document.createElement("td");
-                    quantityCell.textContent = produto.quantity || '0';
-                    subRow.appendChild(quantityCell);
-
-                    const priceCell = document.createElement("td");
-                    priceCell.textContent = "R$ " + (produto.price ? produto.price.toFixed(2) : '0.00');
-                    subRow.appendChild(priceCell);
-
-                    subTableBody.appendChild(subRow);
-                });
-            }
-            subTable.appendChild(subTableBody);
-            extraCell.appendChild(subTable);
-            extraRow.appendChild(extraCell);
-
-            tableBody.appendChild(extraRow);
-        });
-    }
-
-
-    function toggleInfo(row, arrowIcon) {
-        const extraRow = row.nextSibling;
-        const isExpanded = extraRow.style.display === "table-row";
-
-        arrowIcon.classList.toggle("expanded", !isExpanded);
-        extraRow.style.display = isExpanded ? "none" : "table-row";
-    }
-
-    fetchData();
-</script>
-
+    </script>
 </body>
 </html>
