--- a/src/main/resources/static/pagamento.html
+++ b/src/main/resources/static/pagamento.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
+    <h1 class="button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+    <div class="Buscar-bar">
+        <input type="text" placeholder="Buscar Produtos...">
+        <button onclick="BuscarProdutos()">Buscar</button>
+    </div>
+    <button class="login-button" onclick="window.location.href='login.html'">Login</button>
+    <button class="carrinho" onclick="window.location.href='carrinho.html'">Carrinho</button>
+    <button class="Compras" onclick="window.location.href='pilha.html'">Histórico de compra</button>
+</header>
 <div class="container">
     <h1>Finalizar Compra</h1>
     
@@ -82,5 +92,8 @@
         <button type="submit" class="button">Finalizar Compra</button>
     </form>
 </div>
+<footer>
+    <p>&copy; RogerinhoBoasVendendas.</p>
+</footer>
 <script src="script.js" defer></script>
 </body>
